# timeslot

./: LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
src/timeslot/: __init__.py  timeslot.py
tests/: test_timeslot.py
