[tool.poetry]
name = "timeslot"
version = "0.1.2"
description = "Data type for representing time slots with a start and end."
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]
homepage = "https://github.com/ErikBjare/timeslot"
license = "MIT"
readme = "README.md"
packages = [
    { include = "timeslot", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^2.10.1"

[tool.pytest.ini_options]
addopts = "--cov=timeslot"
testpaths = [
    "src",
    "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
